--- a/cypress/.github/workflows/ci.yml
+++ b/cypress/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
-name: End-to-end tests 🧪
+name: End-to-end tests 
 on: [push]
 jobs:
   cypress-run:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
