--- a/cypress/.github/workflows/ci.yml
+++ b/cypress/.github/workflows/ci.yml
@@ -1,10 +1,15 @@
-name: End-to-end tests 
-on: [push]
+name: Cypress Tests
+
+on: push
+
 jobs:
   cypress-run:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Cypress run
         uses: cypress-io/github-action@v6
+        with:
+          build: npm run build
+          start: npm start
